--- a/appointment/appointment.css
+++ b/appointment/appointment.css
@@ -4,16 +4,15 @@
 {
     font-family: "Raleway";
     background-color: rgb(255, 255, 255);
-
 }
 
 .wrapper
 {
-    max-width: 500px;
+    max-width: 600px;
     width: 100%;
     background: #fff;
     margin: 20px auto;
-    padding: 50px;
+    padding: 100px;
     box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
     font-size: 10px;
 }
@@ -21,18 +20,25 @@
 input, select
 {
     font-size: 10px;
-    width: 20%;
+    width: 25%;
     height: 20px;
     border: solid rgb(255, 255, 255);
-    border-radius: 5px;
-    padding: 2px;
+    border-radius: 10px;
+    padding: 10px 3px;
     background-color: #dddddd;;
 
 }
 
 .emailadd
 {
-    width: 300%;
+    max-width: 100%;
+    width: 550%;
+
+}
+
+.emailadd input
+{
+    width: 100%;
 }
 
 p
